Add secret for scraang

--- a/cluster/apps/scraang/scraang/scraang-secret.sops.yaml
+++ b/cluster/apps/scraang/scraang/scraang-secret.sops.yaml
@@ -5,16 +5,17 @@ metadata:
     name: scraang-secret
     namespace: scraang
 stringData:
-    latitude: ENC[AES256_GCM,data:uIKnlNsh5lxEAw==,iv:r+AInoC+Lfon3sXGt5p9SrUk2G/3Ek26hiCScxr1ucQ=,tag:JDcewir/zUxPRpItl0XFAQ==,type:str]
-    longitude: ENC[AES256_GCM,data:5/adRStX4UtAYg==,iv:q1fzBUeJFVOxkYxLVZkNIRrJffWRMHDoyysqrQ+V2d8=,tag:jg+sxSBB6ubN0gCrqubZSA==,type:str]
-    homeAssistantBearerToken: ENC[AES256_GCM,data:nikVMu56nHNzqS4Q7bPlMciO9wNHPBZZ9d1on6bsLuW0sosafZCtEt92ktNRCY2lG6k35Ez4fLeoa6f7z68YSfzPDbMqFJ6fmeP6Lnbp7R56oBUberVbgKcd8sl+OZXDruwwavPgeTu1WaKoqNuKvZ89F7+iNopnHrfsRJpk0GAa/FMKk5Bz1HGS1IfNIr3dp84eZdlgcThVgKwrLSrS30m+B8EGteBKXr2dsL8cnhuhn5vAp1g8,iv:3iFqXTlZziJTa4Ag9f+8lyocO8t/3iWPxZz0yoihPIY=,tag:x1A16/U6FYgQvZWms9T6YA==,type:str]
-    homeAssistantUrl: ENC[AES256_GCM,data:NsTIBYtA8r/0bD+N,iv:QrRmkWf6GOT0D7aYzcm6Z41rWP4L2xMbRQaJ0HXUF4U=,tag:uyLN5VPzrCoDkNGnChwxNw==,type:str]
-    databaseHost: ENC[AES256_GCM,data:cR414xKaWkc5GCGVxshL/CT+,iv:g7v6Ry5QRswmNAPh2R65khJxzWrNNBzf42HobnRPoGM=,tag:rihpO+4HcOh8IMBajWpmWg==,type:str]
-    databaseName: ENC[AES256_GCM,data:AAFgH5edew==,iv:UOpk0hnqE7QQN16ZWKR27+8lrqm0jLLDksXt3Yut1Ps=,tag:DgUVTmV1Y4l4On5X/rBcKg==,type:str]
-    postgresPassword: ENC[AES256_GCM,data:Cxt6GQPCrVd9zfHOz+41+pmpA0I=,iv:lvMXHY1DcbBvbvB+5Ddxdn4sSlSU2BFdS/ZJY6G6Ftc=,tag:Q/cG4F57ppNjOhu3GwONJA==,type:str]
-    postgresUser: ENC[AES256_GCM,data:AUz4IN7L7Q==,iv:hHViaFhyivzVFuBiADnkOokc6LXV8zyZW6OroJVHQmo=,tag:F5rk0rw7C4QHkBE9LI88MA==,type:str]
-    webHookId: ENC[AES256_GCM,data:45TwN2MUdssI1xfOIBQDKtNq,iv:E0LgDxCaeooVJvrH+YMAhHpl7JGTNI0YTNpVOuj7Jjs=,tag:WMwTGfELOV7uhnRjGZg3VQ==,type:str]
-    webHookToken: ENC[AES256_GCM,data:8pK/wFohQoxGrVTZMQfsdVuawQPNN06aGPuT0YBirSL4n3h8nH79noXhMxbR2BMnChPnGoZSoBajy3SJGYTCvfSU1vw=,iv:7H56DKGa2dLZPaUwKtwmZnjml8qa0os2dtNtnhZLxSY=,tag:M4dWW04iKk9/uu3bkz2vrA==,type:str]
+    latitude: ENC[AES256_GCM,data:PBD/Gd2GPQ9yYA==,iv:UHal919+NuZtMw4SR4RyBJX6nMXzoeDnG1MW79NtPbc=,tag:rTCPIkMCJ2oh1eMby/Oc+w==,type:str]
+    longitude: ENC[AES256_GCM,data:qatRB06R7W805A==,iv:oD5nC4ZJIl7nPvTLMJpuw1YsygxLlVblWt26oMSXcEE=,tag:jIesxicN6IbQt+vN8WugDQ==,type:str]
+    homeAssistantBearerToken: ENC[AES256_GCM,data:c4C3Cx5c41rEoRQZBzb+6Z5IzQf9b5qTmKjO49cfq7nV5SO//JPryQqXs+0QpXc/YG/GRxMq6rWDee/HdXT3eIwL6SQsV1u32eD5MEybLr7iFBMV0dYCuJFUZss4IRFBeEXB5pNXs/CKZ9oEDy+Wl7uHdSur2iYjBtBDUE5/Jc+x/Af9juLGb6HvwdSH9SQAUGEcyjgmxEDNLnLaOjO2h0q7k1DmyjQHqMFSQWfFb5vdJHXC+i+5,iv:kBiAXqbQ2aU/f13sXiLIWElMXBJqXHTypvUhCsGlLfU=,tag:8fDGDVtTlXJZZP4OcQuDJw==,type:str]
+    homeAssistantUrl: ENC[AES256_GCM,data:UWgf4aFxda0kGMpu,iv:iiGH11FCzAcAZq8L4oIoqSK0Mf22in32J7xAvnTbFwc=,tag:dR/a3un2wt/1c5kUDH1/DA==,type:str]
+    databaseHost: ENC[AES256_GCM,data:+LraKSuDsV0d9cIk4azaogYP,iv:cBmjcPcLL9DzdOIHiysRZ0oZ2hkHx+i2VPrZbvAYMAI=,tag:iMZjUdLS/yU2AiC8YomuRA==,type:str]
+    databaseName: ENC[AES256_GCM,data:mfRGtFoCOA==,iv:GV+lq6yKIwXfaBcrP8P9FfXWsHA9ByYKAT26vN/aRN8=,tag:5G6I0Do4c0Hx+y7bNjPFfQ==,type:str]
+    postgresPassword: ENC[AES256_GCM,data:V2Xk/0hesFQTKRiFp8KwqZKHKOA=,iv:3N/49T2TuRdj2kAAGpKTBhj2MJGucWDHjcsJzY342Y8=,tag:39lSTU9fcDihv4U1+ZULlw==,type:str]
+    postgresUser: ENC[AES256_GCM,data:W/I0mJ4Mow==,iv:vGDsJs3YwcJOUMV5CQUH2RSpmOz6nLvNMkT/XHKLFV4=,tag:iFm5eW/rz4c7j7dAyJ0gWg==,type:str]
+    webHookId: ENC[AES256_GCM,data:qhoCNB6WCV3Iy+luA2ORRTvt,iv:EcU9jDULmFpwmaihZlh4tMwd7XRl+xBP0rJto847uIo=,tag:0pxfspBIKFm/5qojufVoAw==,type:str]
+    webHookToken: ENC[AES256_GCM,data:6A9EdgDVQKZE57/QYSuoHHojQPA4eH8ZGgHYYjt4B2x13SuEaHOdF1z3RmsIs1g15YExENk5T5HXI+TZ35d0ioGKRUc=,iv:0QArWUOBVpxwkVEi58HheTv3iqFJB7oh3A8S7t3o9gY=,tag:3Q7bOZ1MGjuEL9Viz0ewOw==,type:str]
+    homeStreet: ENC[AES256_GCM,data:lKkUXSx1pajyWFsf,iv:LvlbwBc5eyX652ijmULUGavr8b9BJ0RzrT+0EG/LHS8=,tag:RLUvlJvGjry/9lBqaKHoAg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,14 +25,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkc09IUjZBQ3FrWjV3bnRX
-            OHlPQUpsbHp6U1ZiTTRzNzNOYVFFOXNMbWtVCjkzL2xqNGpxQ3Jhc2NPQkJxcDdI
-            eGZBaE42VEdVSkRIMi9URGJJQU1hWU0KLS0tIGN6YUZKcG5kaW0rUnVFSTg1anUv
-            WXcyVW5USSt4ZFZZME1EOUZXTlViYUUK+mMnEnEMjfba48JmoU0Q99ENXByw4r2G
-            PtdoDc2A1hXHAdKE788fl9UgsDct3XqQ8buPOujK9IgRuglJ+q1+Gg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPMTlFWjBGR0tDQWxWd0I5
+            bW1ZY1J5ckYyL3Z4WmRKWmNPS2UyUVFHVlJzCkxuTFIrNGFmb0JHOXR3QkplOUJZ
+            eHcxd3dkN01lcW5WVlp0YkhlKzh4aG8KLS0tIHJGQ1F1VjRPb1R1STNOY1phRWFr
+            TEpiTlNLZnd3ZjhBZVYrTDZuMEloSzgKFOdEH0mhzwPZEZTG8vMiNKWFdMYJhR+y
+            5x7Geu0m0+3wS/fBpbcd3lXswBkEKkYGsxnPViOgV0lkr9Gdo8fTwA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-08-21T10:59:02Z"
-    mac: ENC[AES256_GCM,data:1mOXR3/SR16LrTbiDvwWCqg7vXv2GWjZJJ6a9tHASf1/lc3fm1+93N6zLwWDthM3CSp5P00Npg3t8ybP8IKu4jX1XxdIxBRwJk0n3rH3rHXuKJQZxVzqtKk/00/3O+tvu8kJuzcELIJJ+SP2PfYI7W9w19teq5RQU0CO8KpxS5k=,iv:v5NrcSWrYo6b5HuR2vuHkqOcKsq8j47SweN+zTeQ8cM=,tag:2vt60kG+fnnMnssTvJNimw==,type:str]
+    lastmodified: "2024-09-06T09:24:00Z"
+    mac: ENC[AES256_GCM,data:sMDz0EqD8ESXBqhRh30jHOYJ6gOmIZGftPlXg8avJjwgct6lZwQ0OGrlzMcrSmOd0dtuuyGfzA0g4Zc46dHY7QeYlba3N8eTNBK//WTyTzDpaDMYro05Slp55RhVr7BZZCtpD0+YyRO4nF3QDOg8mRbu4xbLtoPi5dRoRKsBZfQ=,iv:jEeRZhqJZE4ad4eH0W9ThkAE3OY6d2JBi6xVXBioMbM=,tag:3LfmESJt49d5RfIpFjF2Xg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
