--- a/cluster/apps/hajimari/hajimari/helm-release.yaml
+++ b/cluster/apps/hajimari/hajimari/helm-release.yaml
@@ -35,6 +35,7 @@ spec:
           - monitoring
           - argocd
           - flux-system
+          - linkding
           - miniflux
           - scraang
           - pihole
