--- a/cluster/apps/linkding/linkding/secret.sops.yaml
+++ b/cluster/apps/linkding/linkding/secret.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: linkding-superuser
     namespace: linkding
 type: Opaque
-data:
-    LD_SUPERUSER_NAME: ENC[AES256_GCM,data:W1IctHk=,iv:osYt0Mui7WE+MlJsS+crSTtRyX526y35glRp+k8qx00=,tag:dVEv7jmF15ENWIXXTRYWsQ==,type:str]
-    LD_SUPERUSER_PASSWORD: ENC[AES256_GCM,data:zWHCRbHOVai3yepvS9n+DQ==,iv:/YKApZdlvi1oeWt6cUe8pyvGPc5zkj4TyB+yuqt3uow=,tag:2U6DZjrxmqWgnvbbkIKGLg==,type:str]
+stringData:
+    LD_SUPERUSER_NAME: ENC[AES256_GCM,data:naQVT04=,iv:avU2XMwVpouTG0TtIwJ/zTGaSYa0yizpy6+KhSDoN8Q=,tag:I8cBZg+1iZiYp5M/62X8pw==,type:str]
+    LD_SUPERUSER_PASSWORD: ENC[AES256_GCM,data:kCTqftjdsRsc9CxLPuS5UA==,iv:DS2JyPyfPhyOZi66fFBFIh5uuqwwNtEYdCKDuGsgWaY=,tag:aU5Pl15MuuGcnoBdX9/IsA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYeWQvOWxkSnp6U2RlRVBr
-            aTdpcFo2Sm1ja1FPZ0s2MXUwYjlqQnhFQUdRCjJJcFVVdEk4RHltZzdibEliSEMz
-            NDlIVVcvYyt1eHNGREYvOEQwTHZTbnMKLS0tIE9CWWV0STRKanl0K2dFR0ExbWl4
-            YUpGSWdFb1NnejdqOUU3cGl4M1Z0ZGsK10ylGRz49ceoaZ2MnGm/A3zChjMZSo0r
-            Etw6YEVnt2G8e66fTCMt1Q9otX6O3FPIluC/vElgDfSD63iox/g/xw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBETmtvWS9ua05UbjV3S1c2
+            Q2s4OWkrWW5IeVdCaTBJZjNGTkRKck10dVFZCnRDRnRLL1lvVm90TmFBTWlnQnY1
+            OEFWZUZTM3BlYk5CcVEwZGV1cHI0Z2MKLS0tIFkrd0xEQ01Zdkl5dUJvR0xtVWlI
+            U3NzVVAwVXhiZFBMR2E4anpnYWxvNU0KYR1yJWJldzUpUJWx2H8sDLx/EPe0uwvI
+            k5tFiVvRAfNNnctNGNm8j7CrVhpmFmc8jc+H/Jj7heTMaB2mEpB7lQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-09-23T09:05:51Z"
-    mac: ENC[AES256_GCM,data:XrRCI87z+8CaTHWmirX+iIQsFaW3aZDK1+avmDDDh+neXjKaK06JwVjG6Wey8LF7Sa9Gm2uJbT3J9W0+H63mJb+SOWx96ECeMeQ+yHWpUfSbiXIoI4JGLgzub3ZyMALbaMT5nzCZsCNAK//iepTeo6D+xfN+YdK1v283Rxj3Irw=,iv:1g1y24WTPCl1qm7NqYxdt9qeZNm2vqQMKBKxdVG/i4E=,tag:pqfDzRYLcczmIZPgQQM4kA==,type:str]
+    lastmodified: "2024-09-23T09:17:09Z"
+    mac: ENC[AES256_GCM,data:bzeC+ISRediMSTdIjIII+D1NJx+br0vSrTy2POuq62ebrBjdP/kpppB5JfbKT7J3PJPAXQOpqNx5XV5rakeDaCjlxjYEL28OLv0LD4PMBCbiN5tTnyrN6tTWST2iFQ7sWteQg25oixgO8ghYs4la2FqOCoEpx8Z44UTgWkXpooQ=,iv:cZQ90o2XdFpLFYBDHoIioQv2Dq46oDKogCSuOhHL2ng=,tag:D4/P9ZwkuXg+Y8FVtxvGaw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
