Update limits and requests for flux

--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - database
   - hajimari
   # - firefly
-  - flux-system
+  # - flux-system
   - kube-system
   - linkding
   - miniflux
