--- a/cluster/apps/kube-system/metrics-server/helm-release.yaml
+++ b/cluster/apps/kube-system/metrics-server/helm-release.yaml
@@ -22,3 +22,10 @@ spec:
       - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
       - --kubelet-use-node-status-port
       - --metric-resolution=15s
+    resources:
+      requests:
+        cpu: 10m
+        memory: 32Mi
+      limits:
+        cpu: 200m
+        memory: 64Mi      
