--- a/provision/ansible/inventory/group_vars/master/k3s.yml
+++ b/provision/ansible/inventory/group_vars/master/k3s.yml
@@ -3,6 +3,9 @@
 # https://github.com/PyratLabs/ansible-role-k3s
 # (bool) Specify if a host (or host group) are part of the control plane
 k3s_control_node: true
+
+k3s_become: true
+
 # (dict) k3s settings for all control-plane nodes
 k3s_server:
   node-ip: "{{ ansible_host }}"
