--- a/cluster/apps/system-upgrade/system-upgrade-controller/agent-plan.yaml
+++ b/cluster/apps/system-upgrade/system-upgrade-controller/agent-plan.yaml
@@ -9,7 +9,8 @@ metadata:
 spec:
   serviceAccountName: system-upgrade
   concurrency: 1
-  channel: https://update.k3s.io/v1-release/channels/v1.29
+  # Also update provision/ansible/inventory/group_vars/kubernetes/k3s.yml
+  channel: https://update.k3s.io/v1-release/channels/v1.30
   nodeSelector:
     matchExpressions:
       - key: node-role.kubernetes.io/master
