Hide version on login page

--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -48,6 +48,7 @@ spec:
         url: https://grafana.net
       auth.anonymous:
         enabled: false
+        hide_version: true
       auth.ldap:
         enabled: true
         allow_sign_up: true
