--- a/cluster/apps/hajimari/hajimari/helm-release.yaml
+++ b/cluster/apps/hajimari/hajimari/helm-release.yaml
@@ -42,6 +42,7 @@ spec:
           - adguard
           - home-assistant
           - shiori
+          - wger
       title: Start
       name: "you"
       customApps:
