--- a/cluster/apps/wger/wger/helm-release.yaml
+++ b/cluster/apps/wger/wger/helm-release.yaml
@@ -39,11 +39,11 @@ spec:
         ipwareMetaPrecedenceOrder: "X_FORWARDED_FOR,REMOTE_ADDR"
       persistence:
         enabled: true
-        existingClaim:
-          enabled: true
-          media: wger-media
-          static: wger-static
-          celeryBeat: wger-celery-beat
+        storageClass: "nfs-client"
+        sizeMedia: 5Gi
+        sizeStatic: 5Gi
+        sizeCeleryBeat: 1Gi
+
     celery:
         enabled: true
 
