Install actual server

--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -27,5 +27,6 @@ resources:
   - rocketchat-charts.yaml
   - stakater-charts.yaml
   - traefik-charts.yaml
+  - truecharts-charts.yaml
   - weaveworks-kured-charts.yaml
   - weave-gitops.yaml
