Update ingress config for actual

--- a/cluster/apps/actual/actual/helm-release.yaml
+++ b/cluster/apps/actual/actual/helm-release.yaml
@@ -61,4 +61,6 @@ spec:
             certificateIssuer: "letsencrypt-production"
           traefik:
             enabled: true
+            enableFixedMiddlewares: false
+
  
