Fix workload config for actual

--- a/cluster/apps/actual/actual/helm-release.yaml
+++ b/cluster/apps/actual/actual/helm-release.yaml
@@ -30,8 +30,10 @@ spec:
         memory: 128Mi
     workload:
       workload-actualserver:
-        podSpec:
-          nodeSelector: {}
+        enabled: true
+        podOptions:
+          nodeSelector:
+            kubernetes.io/arch: "arm64"
     persistence:
       server-files:
         enabled: true
