Fix patch for actual

--- a/cluster/apps/actual/actual/helm-release.yaml
+++ b/cluster/apps/actual/actual/helm-release.yaml
@@ -74,5 +74,5 @@ spec:
               spec:
                 template:
                   spec:
-                    nodeselector:
+                    nodeSelector:
                       kubernetes.io/arch: arm64
