Remove hash for wrong image

--- a/cluster/apps/actual/actual/helm-release.yaml
+++ b/cluster/apps/actual/actual/helm-release.yaml
@@ -20,7 +20,7 @@ spec:
     image:
       repository: ghcr.io/actualbudget/actual-server
       pullPolicy: IfNotPresent
-      tag: 24.10.1@sha256:83fc0d37cd31a71124763570ce66ca358a5064afbd94b2d1b3f9988b7c639b5c
+      tag: 24.10.1-alpine
     resources:
       limits:
         cpu: 250m
