Fix ingress config for actual

--- a/cluster/apps/actual/actual/helm-release.yaml
+++ b/cluster/apps/actual/actual/helm-release.yaml
@@ -55,6 +55,9 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+                overrideService:
+                  name: actualserver
+                  port: 10293                
         integrations:
           certManager:
             enabled: true
