--- a/cluster/apps/actual/actual/helm-release.yaml
+++ b/cluster/apps/actual/actual/helm-release.yaml
@@ -49,7 +49,7 @@ spec:
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/icon: "piggy-bank-outline"
-        #ingressClassName: "traefik"
+        ingressClassName: "traefik"
         hosts:
           - host: "actual.${SECRET_DOMAIN}"
             paths:
