Add app to hajimari

--- a/cluster/apps/hajimari/hajimari/helm-release.yaml
+++ b/cluster/apps/hajimari/hajimari/helm-release.yaml
@@ -39,10 +39,9 @@ spec:
           - miniflux
           - scraang
           - pihole
-          - adguard
           - home-assistant
           - shiori
-          - wger
+          - actual
       title: Start
       name: "you"
       customApps:
